--- a/src/main/resources/static/webapp/css/mainStyle.css
+++ b/src/main/resources/static/webapp/css/mainStyle.css
@@ -49,7 +49,6 @@
 
   /*  head1  RRRRRR */
   .head {
-    /* display: inline-block; */
     font-size: 2em;
     padding-bottom: 0px;
     margin-bottom: 0px;
@@ -155,7 +154,8 @@
   }
   /* Main picture -> Image and Text inside    RRRRRRRR  */
   .container {
-    background: url("../webapp/images/color13.jpg") center/cover, no-repeat;
+   /* background: url("../webapp/images/color13.jpg") center/cover, no-repeat;*/
+    background-color: green;
     background-attachment: fixed;
     min-height: 90vh;
     display: flex;
